# MILLIE

./: deepseek_markdown_20260715_8c430d.md  flash_esp (2).sh  sentinel_sniffer (3).ino
millie-pi/: config.example.yaml  pyproject.toml  quick-install-pi.sh  setup.sh
millie-pi/millie_pi/: __init__.py  active_node.py  phone_client.py
